--- a/get.html
+++ b/get.html
@@ -30,6 +30,7 @@ $(document).ready(function(){
                         dataType: 'json',
                         success: function (data) {
                           console.log(data.name);
+                          console.log(data.age);
                           // console.log(data);
 
 
